[gd_scene load_steps=15 format=3 uid="uid://bfyc4ue1vvjjn"]

[ext_resource type="Script" path="res://scripts/TitleState.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bjflfge83ue3i" path="res://scenes/misc/logoBumpin.tscn" id="2"]
[ext_resource type="Environment" uid="uid://dretjka8mvj43" path="res://assets/environments/titleGlow.tres" id="3"]
[ext_resource type="SpriteFrames" path="res://assets/res/title/titleEnter.res" id="4"]
[ext_resource type="PackedScene" uid="uid://cftnxhe2ysqs4" path="res://scenes/chars/charDanceTitle.tscn" id="5"]

[sub_resource type="Gradient" id="1"]
offsets = PackedFloat32Array(0, 0.780303, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.0784314, 0.172549, 0.337255, 1, 0.0666667, 0.282353, 0.380392, 1)

[sub_resource type="GradientTexture2D" id="2"]
resource_local_to_scene = true
gradient = SubResource("1")
width = 1080

[sub_resource type="Gradient" id="Gradient_tqg4y"]
offsets = PackedFloat32Array(0, 0.582011, 1)
colors = PackedColorArray(0.54902, 0.839216, 0.929412, 0, 0.54902, 0.839216, 0.929412, 1, 0.54902, 0.839216, 0.929412, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_os4jk"]
gradient = SubResource("Gradient_tqg4y")

[sub_resource type="Curve" id="7"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="4"]
curve = SubResource("7")

[sub_resource type="Curve" id="5"]
_data = [Vector2(0, 0), 0.0, 4.94324, 0, 0, Vector2(1, 0), -2.80295, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="6"]
curve = SubResource("5")

[sub_resource type="ParticleProcessMaterial" id="3"]
emission_shape = 3
emission_box_extents = Vector3(960, 1, 1)
particle_flag_disable_z = true
spread = 180.0
gravity = Vector3(0, -500, 0)
angular_velocity_min = 200.0
angular_velocity_max = 200.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
linear_accel_min = 500.0
linear_accel_max = 500.0
linear_accel_curve = SubResource("4")
scale_min = 50.0
scale_max = 50.0
scale_curve = SubResource("6")
color = Color(0.54902, 0.839216, 0.929412, 1)
color_ramp = SubResource("GradientTexture1D_os4jk")

[node name="TitleState" type="Node2D"]
script = ExtResource("1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("3")

[node name="BG" type="TextureRect" parent="."]
offset_left = 1920.0
offset_right = 3000.0
offset_bottom = 1920.0
rotation = 1.5708
texture = SubResource("2")
stretch_mode = 1

[node name="BGParticles" type="GPUParticles2D" parent="."]
modulate = Color(2, 2, 2, 1)
position = Vector2(960, 1080)
amount = 20
process_material = SubResource("3")
lifetime = 1.5
fixed_fps = 60

[node name="LogoCanvas" type="CanvasLayer" parent="."]

[node name="Logo" type="Node2D" parent="LogoCanvas"]

[node name="logoBumpin" parent="LogoCanvas/Logo" instance=ExtResource("2")]
position = Vector2(427, 322)

[node name="CharCanvas" type="CanvasLayer" parent="."]

[node name="Char" type="Node2D" parent="CharCanvas"]

[node name="charDanceTitle" parent="CharCanvas/Char" instance=ExtResource("5")]
position = Vector2(1387, 617)

[node name="CharData" type="Marker2D" parent="CharCanvas/Char"]
position = Vector2(1387, 617)

[node name="TitleEnter" type="AnimatedSprite2D" parent="."]
position = Vector2(1256, 1000)
scale = Vector2(1.5, 1.5)
sprite_frames = ExtResource("4")
animation = &"idle"
frame = 2

[node name="EnterTimer" type="Timer" parent="."]
wait_time = 0.05
